css/VideoPlayer.css
/* ... */
.fl-theme-prefsEditor-bw .fl-videoPlayer-scrubber .ui-slider-range,
.fl-theme-prefsEditor-by .fl-videoPlayer-scrubber .ui-slider-range {
    background-image: none;
    background-color: black !important;
}

.fl-theme-prefsEditor-wb .fl-videoPlayer-scrubber .ui-slider-range {
    background-image: none;
    background-color: white !important;
}

.fl-theme-prefsEditor-yb .fl-videoPlayer-scrubber .ui-slider-range {
    background-image: none;
    background-color: yellow !important;
}
.fl-theme-prefsEditor-lgdg .fl-videoPlayer-scrubber .ui-slider-range {
    background-image: none;
    background-color: #BDBDBB !important;
}


/*******************************************************************
 * Styling overrides for the controls when using PrefsEditor themes
 *******************************************************************/

.fl-theme-prefsEditor-wb .ui-state-active .ui-button-text,
.fl-theme-prefsEditor-wb .ui-state-active .ui-icon,
.fl-theme-prefsEditor-wb .ui-state-default.ui-state-hover .ui-button-text,
.fl-theme-prefsEditor-wb .ui-state-default.ui-state-hover .ui-icon {
    background-color: #fff !important;
}

.fl-theme-prefsEditor-bw .ui-state-active .ui-button-text,
.fl-theme-prefsEditor-bw .ui-state-active .ui-icon,
.fl-theme-prefsEditor-bw .ui-state-default.ui-state-hover .ui-button-text,
.fl-theme-prefsEditor-bw .ui-state-default.ui-state-hover .ui-icon,
.fl-theme-prefsEditor-by .ui-state-active .ui-button-text,
.fl-theme-prefsEditor-by .ui-state-active .ui-icon,
.fl-theme-prefsEditor-by .ui-state-default.ui-state-hover .ui-button-text,
.fl-theme-prefsEditor-by .ui-state-default.ui-state-hover .ui-icon {
    background-color: #000 !important;
}

.fl-theme-prefsEditor-yb .ui-state-active .ui-button-text,
.fl-theme-prefsEditor-yb .ui-state-active .ui-icon,
.fl-theme-prefsEditor-yb .ui-state-default.ui-state-hover .ui-button-text,
.fl-theme-prefsEditor-yb .ui-state-default.ui-state-hover .ui-icon {
    background-color: #ff0 !important;
}

.fl-theme-prefsEditor-lgdg .ui-state-active .ui-button-text,
.fl-theme-prefsEditor-lgdg .ui-state-active .ui-icon,
.fl-theme-prefsEditor-lgdg .ui-state-default.ui-state-hover .ui-button-text,
.fl-theme-prefsEditor-lgdg .ui-state-default.ui-state-hover .ui-icon {
    background-color: #BDBDBB !important;
}


/*******************************************************************
 * Styling overrides for the controls when using PrefsEditor themes
 *******************************************************************/
.fl-theme-prefsEditor-wb .fl-videoPlayer-controller,
.fl-theme-prefsEditor-yb .fl-videoPlayer-controller {
    background-color: black !important;
}

.fl-theme-prefsEditor-wb .fl-videoPlayer-controller,
.fl-theme-prefsEditor-yb .fl-videoPlayer-controller,
.fl-theme-prefsEditor-wb .fl-videoPlayer-button,
.fl-theme-prefsEditor-yb .fl-videoPlayer-button {
    background-color: black;
}

.fl-theme-prefsEditor-wb .fl-videoPlayer-caption-captionText,
.fl-theme-prefsEditor-yb .fl-videoPlayer-caption-captionText {
    background-color: black;
}

.fl-theme-prefsEditor-bw .fl-videoPlayer-caption-captionText,
.fl-theme-prefsEditor-by .fl-videoPlayer-caption-captionText {
    color: black;
}

.fl-theme-prefsEditor-wb .fl-videoPlayer-caption-captionText {
    color: white;
}

.fl-theme-prefsEditor-bw .fl-videoPlayer-caption-captionText {
    background-color: white;
}

.fl-theme-prefsEditor-by .fl-videoPlayer-caption-captionText {
    background-color: yellow;
}

.fl-theme-prefsEditor-yb .fl-videoPlayer-caption-captionText {
    color: yellow;
}

.fl-theme-prefsEditor-bw .fl-videoPlayer-transcript-element-highlight {
    background-color: black !important;
    color: white !important;
    text-decoration: none !important;
}

.fl-theme-prefsEditor-wb .fl-videoPlayer-transcript-element-highlight {
    background-color: white !important;
    color: black !important;
    text-decoration: none !important;
}

.fl-theme-prefsEditor-yb .fl-videoPlayer-transcript-element-highlight {
    background-color: yellow !important;
    color: black !important;
    text-decoration: none !important;
}

.fl-theme-prefsEditor-by .fl-videoPlayer-transcript-element-highlight {
    background-color: black !important;
    color: yellow !important;
    text-decoration: none !important;
}


/* Play button */
.fl-theme-prefsEditor-bw .fl-videoPlayer-play,
.fl-theme-prefsEditor-by .fl-videoPlayer-play {
    background-image: url('../images/black/play.png');
}

.fl-theme-prefsEditor-bw .fl-videoPlayer-play:hover,
.fl-theme-prefsEditor-by .fl-videoPlayer-play:hover {
    background-image: url('../images/black/play_hover.png');
}

.fl-theme-prefsEditor-yb .fl-videoPlayer-play {
    background-image: url('../images/yellow/play.png');
}

.fl-theme-prefsEditor-yb .fl-videoPlayer-play:hover {
    background-image: url('../images/yellow/play_hover.png');
}

.fl-theme-prefsEditor-wb .fl-videoPlayer-play {
    background-image: url('../images/white/play.png');
}

.fl-theme-prefsEditor-wb .fl-videoPlayer-play:hover {
    background-image: url('../images/white/play_hover.png');
}

.fl-theme-prefsEditor-bw .fl-videoPlayer-playing,
.fl-theme-prefsEditor-by .fl-videoPlayer-playing {
    background-image: url('../images/black/pause.png');
}

.fl-theme-prefsEditor-bw .fl-videoPlayer-playing:hover,
.fl-theme-prefsEditor-by .fl-videoPlayer-playing:hover {
    background-image: url('../images/black/pause_hover.png');
}

.fl-theme-prefsEditor-yb .fl-videoPlayer-playing {
    background-image: url('../images/yellow/pause.png');
}

.fl-theme-prefsEditor-yb .fl-videoPlayer-playing:hover {
    background-image: url('../images/yellow/pause_hover.png');
}

.fl-theme-prefsEditor-wb .fl-videoPlayer-playing {
    background-image: url('../images/white/pause.png');
}

.fl-theme-prefsEditor-wb .fl-videoPlayer-playing:hover {
    background-image: url('../images/white/pause_hover.png');
}

.fl-theme-prefsEditor-lgdg .fl-videoPlayer-play {
    background-image: url('../images/lgdg/play.png');
}
/* ... */

